# cs100_chess_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  board.cpp  board.hpp  main  main.cpp  mouseMovingSDL.cpp  move.hpp  moveBishop.cpp  moveBishop.hpp  moveBlackPawn.cpp  moveBlackPawn.hpp  moveFactory.cpp  moveKing.cpp  moveKing.hpp  moveKnight.cpp  moveKnight.hpp  moveQueen.cpp  moveQueen.hpp  moveRook.cpp  moveRook.hpp  moveWhitePawn.cpp  moveWhitePawn.hpp  piece.cpp  piece.hpp  player.cpp  player.hpp  test
GUI/header/: chess_game.hpp  gui_board.hpp  mouse_manager.hpp
GUI/src/: chess_game.cpp  game_object.cpp  gui_board.cpp
GUI/src/header/: game_object.hpp  gui_board.hpp  mouse_manager.hpp
tests/: bishop_test.hpp  board_test.hpp  bpawn_test.hpp  king_test.hpp  knight_test.hpp  piece_test.hpp  queen_test.hpp  rook_test.hpp  unit_test.cpp  wpawn_test.hpp
